<resources>
    <string name="app_name">Employee List</string>
    <string name="id">Id : </string>
    <string name="age">Age : </string>
    <string name="salary">Salary : </string>
    <string name="action_delete">Delete</string>
    <string name="image">image</string>
    <string name="search">Search employee, age.</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_data">No data</string>
    <string name="clear">Clear</string>
<!-- thought of using it, but not used   <string name="clear_action">Do you want to clear storage?</string>-->
    <string name="title">Employee List</string>
</resources>
