<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey1"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/imgClear"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:src="@drawable/ic_clear" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/imgClear"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="15dp"
            android:gravity="start|center"
            android:hint="@string/search"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="18sp" />
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTop">

        <RelativeLayout
            android:id="@+id/switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/txtEmpty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data"
                android:textColor="@color/colorRed"
                android:textSize="20sp"
                android:visibility="gone" />

        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />


    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorGrey" />

        <TextView
            android:id="@+id/txtClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/please_wait"
            android:textColor="@color/colorGrey"
            android:textSize="16sp" />

    </RelativeLayout>


</RelativeLayout>